# terminal-workspace-rust

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: multi-llm-provider-keys.md  theme-authoring.md
docs/superpowers/plans/: 2026-06-05-claude-session-history.md  2026-06-05-github-account-switcher.md  2026-07-03-multi-llm-provider-keys.md  2026-07-03-provider-launch-button.md  2026-07-03-use-other-models-picker.md  2026-07-05-one-click-provider-setup.md  2026-07-09-claude-account-switching.md  2026-07-10-github-identity-credential-routing.md  2026-07-10-quick-open-file-search.md  2026-07-11-claude-code-third-party-models.md  2026-07-12-wsl-support.md
docs/superpowers/specs/: 2026-06-05-claude-session-history-design.md  2026-06-05-github-account-switcher-design.md  2026-07-03-multi-llm-provider-keys-design.md  2026-07-05-one-click-provider-setup-design.md  2026-07-09-claude-account-switching-design.md  2026-07-10-github-identity-credential-routing-design.md  2026-07-10-quick-open-file-search-design.md  2026-07-11-claude-code-third-party-models-design.md
remote-web/: index.html  package-lock.json  package.json  vite.config.ts
remote-web/src/: app.tsx  git-sheet.tsx  main.tsx  predictive-echo.ts  protocol.ts  sessions-sheet.tsx  styles.css
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  proc.rs
src-tauri/src/apikeys/: mod.rs
src-tauri/src/claude/: accounts.rs  creds.rs  hooks.rs  mod.rs  oauth.rs  usage.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/git/: discover.rs  mod.rs
src-tauri/src/github/: mod.rs
src-tauri/src/identity/: mod.rs
src-tauri/src/pty/: detect.rs  job.rs  mod.rs  shell.rs
src-tauri/src/remote/: bridge.rs  client.rs  mod.rs  protocol.rs  push.rs  pwa_manifest.webmanifest  pwa_sw.js  ratelimit.rs  server.rs  session.rs  tailscale.rs  tunnel.rs  web_client.html
src-tauri/src/search/: mod.rs  watcher.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/wsl/: mod.rs
src/components/: confirm-dialog.tsx  context-menu.tsx  resizer.tsx  settings-modal.tsx  title-bar.tsx  update-manager.tsx  window-controls.tsx  wsl-install-prompt.tsx
src/components/apikeys/: install-prompt.tsx  model-picker.tsx  providers-section.tsx
src/components/claude-accounts/: account-pill.tsx  account-row.tsx  accounts-popover.tsx  claude-accounts-section.tsx  mini-usage-bar.tsx
src/components/diff/: diff-viewer.tsx
src/components/identity/: account-picker.tsx  accounts-modal.tsx  accounts-section.tsx  identity-auto-apply.tsx
src/components/quick-open/: quick-open.tsx
src/components/right-sidebar/: file-tree.tsx  git-panel.tsx  github-auth.tsx  github-panel.tsx  right-sidebar.tsx  sessions-panel.tsx
src/components/sidebar/: project-list.tsx
src/components/workspace/: code-editor.tsx  file-viewer.tsx  markdown-preview.tsx  terminal-pane.tsx
src/hooks/: use-projects.ts
src/lib/: add-account.ts  apikey-presets.test.ts  apikey-presets.ts  claude-accounts.test.ts  claude-accounts.ts  codemirror.ts  ipc.ts  notify.ts  platform.ts  wsl-claude.test.ts  wsl-claude.ts  wsl-paths.test.ts  wsl-paths.ts
src/state/: apikeys.ts  claude-accounts.ts  claude-command.test.ts  claude-command.ts  diff.ts  files.ts  identity.ts  repos.ts  settings.ts  store.ts  theme-shuffle.test.ts  ui.ts  updater.ts  wsl.ts
src/styles/: globals.css
src/themes/: index.ts  theme-provider.tsx  types.ts  validate.ts
src/themes/presets/: black-ash.ts  catppuccin-latte.ts  catppuccin-mocha.ts  halcyon.ts  one-dark.ts  tokyo-night.ts
