[package]
name = "terminal-workspace"
version = "0.3.2"
description = "Multi-project, multi-terminal workspace IDE built with Tauri and Rust"
authors = ["patt-rick"]
edition = "2021"
rust-version = "1.77"

# The library that main.rs (and, on mobile, the generated entrypoint) calls into.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["rt", "macros"] }

# GitHub REST + device flow
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# GitHub token at rest in the OS keychain
keyring = { version = "3", features = ["windows-native", "apple-native"] }

# PTY (cross-platform, ConPTY on Windows)
portable-pty = "0.8"

uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"

# gitignore-aware file listing
ignore = "0.4"

# git: libgit2 (vendored so no system lib is required); push shells out to git CLI
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# --- remote access (feature-gated; see the `remote-access` feature) ---
axum = { version = "0.7", features = ["ws"], optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
# Web Push crypto (VAPID ES256 + RFC 8291 aes128gcm). Already in the tree via
# rustls, so this adds no new download — important on the filtered dev network.
ring = { version = "0.17", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Remote access ships enabled as of 0.3.0 (Phase 3 complete). The feature only
# makes the Remote Access UI functional; nothing binds a socket until the user
# starts a session. Build lean with `--no-default-features` if desired.
default = ["remote-access"]

# this feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]

# Remote access (embedded server, pairing, web client, Cloudflare tunnel,
# Tailscale mode). Enabled by default; see the `default` feature above.
remote-access = [
    "dep:axum",
    "dep:base64",
    "dep:rand",
    "dep:ring",
    "tokio/rt-multi-thread",
    "tokio/net",
    "tokio/sync",
    "tokio/time",
    "tokio/io-util",
    "tokio/process",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
